--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -27,11 +27,22 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: var(--primary-text);
+  background-color: var(--bg-color);
 }
+#root {
+  max-width: 1280px;
+  margin: 0 ;
+  padding: 2rem;
+  min-height: 100vh;
+  
+}
+
+
+
+
 
 
 
