--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -19,7 +19,7 @@
   --bg-color : #ffffff;
 --bg-color-secondary : #000000;
 
---bg-btn : #CBD620;
+--bg-btn : #bbc625;
 --bg-btn-secondary: #F0F2CE;
 }
 
