--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -215,3 +215,165 @@
   right: 20px;
   z-index: 10;
 }
+
+
+/*sidebar*/
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #f4f6fa;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 30;
+  width: 220px;
+  transform: translateX(-100%);
+  transition: transform 0.2s ease;
+ 
+  
+}
+.sidebar--active {
+  transform: translateX(0);
+}
+
+.sidebar-logo {
+  display:flex;
+  align-items: center;
+  justify-content:space-between;
+  height: 70px;
+  width: 100%;
+  padding: 0 19px  ;
+  margin-top: 10px;
+}
+
+.sidebar-logo svg {
+ cursor: pointer;
+
+}
+
+
+
+.sidebar-content{
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  padding: 30px 0 0;
+  width: 100%;
+  max-height: calc(100vh - 150px);
+  overflow-y: auto;
+}
+
+.sidebar-item{
+  width: 100%;
+  display: flex;
+  margin-bottom: 20px;
+
+  position: relative;
+  flex-direction: column;
+
+}
+.sidebar-item:last-child{
+  margin: 0;
+  vertical-align: middle;
+}
+
+
+.sidebar-item:last-child.drop--active{
+
+  max-height:100%;
+  padding-top: 10px;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  
+}
+
+
+
+.sidebar-item:last-child a{
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+
+
+.sidebar-item:last-child a:hover{
+  color: var(--bg-btn-hover);
+}
+
+.sidebar-item:hover svg{
+  
+  fill: var(--bg-btn-hover);
+}
+
+.sidebar-item:hover #toggleIcon{
+  stroke: var(--bg-btn-hover);
+  fill: none;
+}
+.sidebar-item:not(:last-child):hover a{
+  color: var(--bg-btn-hover);
+}
+.sidebar-item a{
+
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 16px;
+  color: #000000;
+  font-family: 'Inter', sans-serif;
+  margin-left: 15px;
+  transition: 0.4s ease;
+  position: relative;
+  font-weight: bold;
+}
+
+.sidebar-item svg{
+
+ 
+  transition: fill 0.5s;
+  margin-right: 12px;
+  margin-bottom: 2px;
+  
+}
+
+.sidebar-item .item-active{
+
+  color: var(--bg-btn-hover);
+}
+
+.sidebar-link{
+
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 16px;
+  color: #000000;
+  font-family: 'Inter', sans-serif;
+  margin-left: 15px;
+  transition: 0.4s ease;
+  position: relative;
+}
+
+.signature{
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 1rem;
+  font-weight: bold;
+ width: 100%;
+ padding: 13px 20px; 
+ background-color: rgba(255, 255, 255,0.3);
+}
+
+.signature span{
+
+  font-size: 0.8rem;
+}
