--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -144,7 +144,32 @@
   z-index: 10;
 }
 
+
+.toaster-error {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #c32020; /* Green color for success */
+  color: white;
+  padding: 16px;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  visibility: hidden;
+  z-index: 10;
+}
+
+
+
 .toaster.show {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible;
+}
+
+.toaster-error.show {
   opacity: 1;
   transform: translateY(0);
   visibility: visible;
